--- a/index.html
+++ b/index.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Projekat HTML-CSS</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-    
-    </body>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="stil.css">
+</head>
+<body>
+<div class="row header">
+	<div class="col-2 logo">
+  		<img src="slike/logo.jpg" width="100" height="100">
+  </div>
+  <div class="col-7 naziv">
+  <h1>Filozofski fakultet</h1>
+  </div>
+  <div class="col-3 prijava">
+  <fieldset>
+  <legend>Prijava</legend>
+  	<form action="" method="post">
+    	<table>
+        	<tr>
+            	<td>Korisničko ime:</td>
+                <td><input type="text" name="user"/></td>
+            </tr>
+            <tr>
+            	<td>Šifra:</td>
+                <td><input type="password" name="sifra"/></td>
+            </tr>
+            <tr>
+            	<td colspan="2" align="center"><input type="submit" value="Prijavi se" name="prijava"/></td>
+            </tr>
+        </table>
+    </form>
+    </fieldset>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-3 menu">
+  <div class="meni">
+    <ul>
+      <li><a href="#">Početna</a></li>
+      <li><a href="stranice/galerija.html">Galerija</a></li>
+      <li><a href="stranice/lokacija.html">Lokacija</a></li>
+      <li><a href="stranice/kontakt.html">Kontakt</a></li>
+    </ul>
+   </div>
+   <div class="baneri">
+   	<div class="baner">
+   	  <a href="http://www.unze.ba"><img src="slike/unze.jpg" width="100%" height="200"></a></div>
+    <div class="baner"> <a href="http://www.isss.unze.ba"><img src="slike/isss.png" width="100%" height="200"></a></div>
+   </div>
+  </div>
+
+  <div class="col-9 sadrzaj">
+    <h1>Dobro došli</h1>
+    <p>Na Filozofskom fakultetu u Zenici se obrazuju stručnjaci iz humanističkih i društvenih nauka, kao i stručnjaci iz oblasti matematike i informatike. Stalnim razvojem i unapređenjem naučnog i stručnog rada, kao i neprestanim inoviranjem nastavnih programa Filozofski fakultet u Zenici postaje prepoznatljivo regionalno središte koje sistemski prati i razvija društvene, humanističke i matematičko-informatičke procese.</p>
+<p>
+U okviru Filozofskog fakulteta u Zenici postoje studijski programi razredne nastave, engleskog jezika i književnosti, njemačkog jezika i književnosti,  bosanskog, hrvatskog, srpskog jezika i književnosti, turskog jezika i književnosti, studijski program matematike i informatike, te kulturalni studij, a u izradi su i studij pshilogije i dvopredmetni studiji. Od akademske 2004/2005. godine svi studijski programi se izvode po bolonjskom modelu, podijeljeni u tri ciklusa. Prvi ciklus traje četiri godine (osam semestara),  gdje student osvaja 240 ECTS kredita, drugi ciklus traje jednu godinu (dva semestra) sa 60 ECTS kredita i  treći ciklus, koji je trenutno u izradi,  trajat će tri godine (šest semestara) sa 180 ECTS kredita.
+</p>
+<p>
+Filozofski fakultet, kao organizaciona jedinica Univerziteta u Zenici, već 2014. godine uspješno je prošao proces akreditacije. Uvođenjem bolonjskog principa u obrazovanje, fleksibilsnost nastavnih planova i programa, ponuđeni izbor odgovarajućih predmeta, razmjena studenata i nastavnika na osnovu različitih programa i projekata u EU i šire, planiranje učenja na daljinu, postaju trenutno prava karakteristika sadašnjeg obrazovnog procesa na Filozofskom fakultetu u Zenici.
+</p>
+<p>
+Kao već tradicionalne zasebne publikacije Filozofski fakultet u Zenici je do sada objavio veliki broj različitih zbornika naučnih i stručnih radova, univerzitetskih udžbenika, priručnika, monografija. U saradnji sa Pedagoškim zavodom u Zenici Filozofski fakultet je i suosnivač časopisa Didaktički putokazi, nadaleko prepoznatog u sveobuhvatnoj praksi edukacije.</p>
+</div>
+</div>
+<div class="row">
+    <div class="footer">
+    	<p>Projekat ZeForge Academy HTML/CSS &copy; Edin Tabak</p>
+    </div>
+</div>
+</body>
 </html>
