--- a/stranice/lokacija.html
+++ b/stranice/lokacija.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Gdje nas možete pronaći</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="../stil.css">
 </head>
